# kapruka_agent_challenge

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  NETWORK_FIX.md  PORT_FIX.md  PROJECT_STRUCTURE.md  QUICK_FIX_SUMMARY.txt  RAILWAY_FIXES.md  README.md  VOICE_SETUP.md  all_code.txt  all_codes.txt  app.py  app_gradio.py  app_gradio_full.py  app_gradio_voice.py  app_simple.py  healthcheck.py  main.py  pyproject.toml  railway.json  requirements.txt  requirements_full.txt  start.sh  test_deployment.sh
.streamlit/: config.toml  config.toml.bak
agents/: catalog_agent.py  checkout_agent.py  chitchat_agent.py  logistics_agent.py  preference_agent.py  reflection_loop.py  router.py
app/backend/: main.py
app/frontend/: index.html  vite.config.js
app/frontend/src/: App.jsx  OrderTrackingCard.jsx  PaymentPage.jsx  TrackPage.jsx  index.css
config/: model.yaml  params.yaml
data/: profiles.json
memory/: session_buffer.py
ui/: app.py
utils/: config.py  llm_services.py  mcp_client.py
