[project]
name = "miniproject03"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=2.29.0",
    "playwright>=1.58.0",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "qdrant-client>=1.17.1",
    "streamlit>=1.55.0",
    "torch>=2.2.0",
    "transformers>=4.40.0",
    "Pillow>=10.0.0",
    "requests>=2.31.0",
    "torchvision>=0.26.0",
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
