[project]
name = "miniproject03"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=2.29.0",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "streamlit>=1.55.0",
    "Pillow>=10.0.0",
    "requests>=2.31.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]